--- a/notes-app/src/app/app.component.html
+++ b/notes-app/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<mat-drawer-container class="app-container">
+  <mat-drawer #sideNav mode="over" position="end" class="sidenav"> Right drawer </mat-drawer>
+  <mat-drawer-content>
+    <app-header [sideNav]="sideNav"></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </mat-drawer-content>
+</mat-drawer-container>
