--- a/notes-app/src/app/shared/styles/shared.scss
+++ b/notes-app/src/app/shared/styles/shared.scss
@@ -1,5 +1,6 @@
 $padding-x: 3rem;
 $padding-y: 1.5rem;
+$sidenav-padding: $padding-y $padding-x $padding-y 1.5rem;
 
 $header-heignt: 6rem;
 $footer-heignt: 4.7rem;
