--- a/notes-app/src/styles.scss
+++ b/notes-app/src/styles.scss
@@ -64,3 +64,12 @@ a {
   background: #f8c2e8 !important;
   max-width: unset !important;
 }
+
+.mdc-list-item--with-two-lines .mdc-list-item__content {
+  display: flex !important;
+  justify-content: space-between !important;
+}
+
+.mdc-list-item.mdc-list-item--with-two-lines {
+  height: fit-content !important;
+}
