--- a/notes-app/src/app/app.component.scss
+++ b/notes-app/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import 'src/app/shared/styles/shared';
+
 .app-container {
   position: absolute;
   top: 0;
@@ -7,7 +9,8 @@
 
   .sidenav {
     background-color: #00c5cb;
-    padding: 1rem;
-    width: 20rem;
+    width: 30rem;
+    height: 100vh;
+    padding: $sidenav-padding;
   }
 }
