--- a/notes-app/src/app/workspace/components/tags-manager/tags-manager.component.scss
+++ b/notes-app/src/app/workspace/components/tags-manager/tags-manager.component.scss
@@ -13,6 +13,12 @@
       height: 3rem;
       width: 3rem;
       font-size: 3rem;
+      cursor: pointer;
+      transition: $hover-transition;
+
+      &:hover {
+        @include hover-text();
+      }
     }
   }
 
