--- a/notes-app/src/app/workspace/components/tags-manager/tags-manager.component.html
+++ b/notes-app/src/app/workspace/components/tags-manager/tags-manager.component.html
@@ -22,7 +22,7 @@
             <mat-list-item role="listitem" class="tag_list__item">
               <div matListItemTitle>#{{ tag }}</div>
             </mat-list-item>
-            <button mat-icon-button class="delete_btn">
+            <button mat-icon-button class="delete_btn" (click)="openConfirmationModal(tag)">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
