feat: create edit/create note form

--- a/notes-app/src/app/workspace/components/note-modal/note-modal.component.html
+++ b/notes-app/src/app/workspace/components/note-modal/note-modal.component.html
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="note_actions">
-    <button mat-raised-button class="edit_btn btn">Edit</button>
+    <button mat-raised-button class="edit_btn btn" (click)="openEditModal()">Edit</button>
     <button mat-raised-button class="delete_btn btn" (click)="openConfirmationModal()">
       Delete
     </button>
