--- a/notes-app/src/app/workspace/workspace.component.html
+++ b/notes-app/src/app/workspace/workspace.component.html
@@ -13,7 +13,7 @@
         />
       </div>
     </div>
-    <button mat-raised-button class="create_btn">
+    <button mat-raised-button class="create_btn" (click)="openCreationForm()">
       <mat-icon>edit</mat-icon><span>Create note</span>
     </button>
   </section>
