--- a/notes-app/src/app/shared/styles/note.style.scss
+++ b/notes-app/src/app/shared/styles/note.style.scss
@@ -4,7 +4,8 @@
   border-top: solid 0.8rem #ff7caf;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #ff7caf;
     color: white;
   }
@@ -14,7 +15,8 @@
   border-top: solid 0.8rem #027ce2;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #027ce2;
     color: white;
   }
@@ -24,7 +26,8 @@
   border-top: solid 0.8rem #64507b;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #64507b;
     color: white;
   }
@@ -34,7 +37,8 @@
   border-top: solid 0.8rem #ffc700;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #ffc700;
   }
 }
@@ -43,7 +47,8 @@
   border-top: solid 0.8rem #a6a6a6;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #a6a6a6;
   }
 }
@@ -52,7 +57,8 @@
   border-top: solid 0.8rem #202225;
 
   .close_btn,
-  .edit_btn {
+  .edit_btn,
+  .action_btn {
     background: #202225;
     color: white;
   }
