--- a/notes-app/src/app/workspace/components/note-modal/note-modal.component.html
+++ b/notes-app/src/app/workspace/components/note-modal/note-modal.component.html
@@ -3,13 +3,14 @@
     <mat-icon>clear</mat-icon>
   </button>
   <div class="note_content">
-    <h2 class="note_title">{{ data.note.title }}</h2>
-    <div class="note_description">{{ data.note.description }}</div>
-    <div *ngIf="data.note.tags && data.note.tags.length" class="note_tags">
+    <h2 class="note_title" appHighlight [text]="data.note.title"></h2>
+    <div class="note_description" appHighlight [text]="data.note.description"></div>
+    <div *ngIf="data.note.tags && data.note.tags.length; else elseBlock" class="note_tags">
       <span *ngFor="let tag of data.note.tags" class="tag" (click)="filterByTag(tag)"
         >#{{ tag }}</span
       >
     </div>
+    <ng-template #elseBlock>No selected tags</ng-template>
   </div>
   <div class="note_actions">
     <button mat-raised-button class="edit_btn btn" (click)="openEditModal()">Edit</button>
