refactor: small fixes

--- a/notes-app/src/app/workspace/components/note-form-modal/note-form-modal.component.html
+++ b/notes-app/src/app/workspace/components/note-form-modal/note-form-modal.component.html
@@ -6,6 +6,7 @@
     <mat-form-field appearance="outline" class="form_field">
       <mat-label>Note title</mat-label>
       <input
+        #titleInput
         matInput
         placeholder="Enter note title"
         class="input"
