feat: add responsive styles

--- a/notes-app/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
+++ b/notes-app/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
@@ -7,6 +7,11 @@
   border-radius: 1rem;
   min-width: 20rem;
   min-height: 10rem;
+
+  @media screen and (max-width: 400px) {
+    min-width: fit-content;
+  }
+
   .close_btn {
     align-self: flex-end;
     background: #00c5cb;
