--- a/notes-app/src/app/app.component.scss
+++ b/notes-app/src/app/app.component.scss
@@ -12,5 +12,9 @@
     width: 30rem;
     height: 100vh;
     padding: $sidenav-padding;
+
+    @media screen and (max-width: 490px) {
+      width: 100vw;
+    }
   }
 }
