--- a/notes-app/src/app/workspace/components/note-form-modal/note-form-modal.component.scss
+++ b/notes-app/src/app/workspace/components/note-form-modal/note-form-modal.component.scss
@@ -8,6 +8,11 @@
   min-width: 25rem;
   min-height: 10rem;
 
+  @media screen and (max-width: 490px) {
+    min-width: fit-content;
+    min-height: fit-content;
+  }
+
   .close_btn {
     align-self: flex-end;
     background: #00c5cb;
@@ -28,8 +33,19 @@
     flex-direction: column;
     padding: 1rem 0;
 
+    @media screen and (max-width: 490px) {
+      width: fit-content;
+      height: fit-content;
+    }
+
     mat-error {
       font-size: 0.7rem;
+    }
+
+    .form_field {
+      @media screen and (max-width: 490px) {
+        width: 100%;
+      }
     }
 
     .form_field:not(:last-child) {
@@ -41,10 +57,21 @@
       justify-content: space-between;
       align-items: center;
 
+      @media screen and (max-width: 490px) {
+        flex-direction: column;
+      }
+
       .options_group {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         padding-left: 1rem;
+
+        @media screen and (max-width: 490px) {
+          align-self: center;
+          grid-template-columns: repeat(2, 1fr);
+          padding-left: 0;
+          margin-top: 0.5rem;
+        }
       }
     }
 
