--- a/notes-app/src/app/workspace/components/note-modal/note-modal.component.scss
+++ b/notes-app/src/app/workspace/components/note-modal/note-modal.component.scss
@@ -5,8 +5,16 @@
   flex-direction: column;
   padding: 1.5rem;
   border-radius: 1rem;
-  min-width: 25rem;
+  width: 25rem;
   min-height: 10rem;
+
+  @media screen and (max-width: 530px) {
+    width: 20rem;
+  }
+
+  @media screen and (max-width: 400px) {
+    width: 15rem;
+  }
 
   &_content {
     margin: 0.5rem 0;
@@ -34,14 +42,28 @@
   .note_actions {
     margin-top: 1rem;
     display: flex;
+
+    @media screen and (max-width: 400px) {
+      flex-direction: column;
+    }
+
     .btn {
       align-self: flex-start;
       min-width: 6rem;
+
+      @media screen and (max-width: 400px) {
+        align-self: center;
+      }
     }
     .delete_btn {
       background-color: #fff0f0;
       color: #b80020;
       margin-left: 1rem;
+
+      @media screen and (max-width: 400px) {
+        margin-left: 0;
+        margin-top: 0.5rem;
+      }
     }
   }
 }
