--- a/notes-app/src/styles.scss
+++ b/notes-app/src/styles.scss
@@ -36,11 +36,14 @@ $notes-app-theme: mat.define-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
 
 html,
 body {
   height: 100%;
+}
+html {
+  font-size: 1rem;
 }
 html * {
   box-sizing: border-box;
@@ -50,7 +53,6 @@ body {
   margin: 0;
   font-family: 'Inter', sans-serif;
   background: linear-gradient(109.8deg, #f8c2e8 0%, #00c5cb 100%);
-  font-size: 1rem;
 }
 a {
   text-decoration: none;
@@ -80,4 +82,10 @@ a {
 
 .mat-mdc-dialog-container .mdc-dialog__surface {
   border-radius: 1rem !important;
+}
+
+@media screen and (min-width: 1537px) {
+  html {
+    font-size: 1.3rem;
+  }
 }
