--- a/notes-app/src/app/workspace/components/note-modal/note-modal.component.scss
+++ b/notes-app/src/app/workspace/components/note-modal/note-modal.component.scss
@@ -26,7 +26,7 @@
 
   .close_btn {
     align-self: flex-end;
-    background: #00c5cb;
+    background: $aqua;
 
     &:hover {
       @include hover-element;
