--- a/notes-app/src/app/workspace/workspace.component.scss
+++ b/notes-app/src/app/workspace/workspace.component.scss
@@ -63,7 +63,7 @@
     }
 
     .create_btn {
-      background-color: #f8c2e8;
+      background-color: $pink;
       min-width: 6rem;
       font-weight: bolder;
       font-size: 1rem;
