--- a/notes-app/src/app/app.component.scss
+++ b/notes-app/src/app/app.component.scss
@@ -8,7 +8,7 @@
   font-size: 1rem;
 
   .sidenav {
-    background-color: #00c5cb;
+    background-color: $aqua;
     width: 30rem;
     height: 100vh;
     padding: $sidenav-padding;
