--- a/notes-app/src/app/shared/styles/shared.scss
+++ b/notes-app/src/app/shared/styles/shared.scss
@@ -1,3 +1,6 @@
+$aqua: #00c5cb;
+$pink: #f8c2e8;
+
 $padding-x: 3rem;
 $padding-y: 1.5rem;
 $sidenav-padding: $padding-y $padding-x $padding-y 1.5rem;
@@ -10,10 +13,6 @@ $hover-transition: all 0.3s;
 
 @mixin hover-element {
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
-}
-
-@mixin hover-tag {
-  filter: drop-shadow(5px 5px 5px rgba(0, 197, 203, 0.5));
 }
 
 @mixin hover-text {
